[gd_scene load_steps=3 format=3 uid="uid://dexidgfh0kg4h"]

[ext_resource type="Script" uid="uid://booorqgvmcqhj" path="res://scripts/character_body_2d.gd" id="1_glpr6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o3jxj"]
radius = 21.0
height = 98.0

[node name="Character" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_glpr6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -48)
shape = SubResource("CapsuleShape2D_o3jxj")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="SmashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="SmashTimer" to="." method="_on_smash_timer_timeout"]
